--- a/2 - Computational Genomics.ipynb
+++ b/2 - Computational Genomics.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -72,6 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "!dlroW olleH\n",
       "Herro Worrd!\n",
       "H\n",
@@ -90,6 +91,7 @@
     }
    ],
    "source": [
+    "print word.count('l') # Prints the count of a specific character in word.\n",
     "print word[::-1] # Prints the reverse of the string\n",
     "print word.replace('l', 'r') # Replaces all instances of the first parameter with the second parameter\n",
     "for i in word: # In python, you can treat strings as iterable arrays. This code will print each letter in word.\n",
@@ -212,6 +214,7 @@
     }
    ],
    "source": [
+    "#Answer\n",
     "import time\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -343,13 +346,12 @@
    "outputs": [],
    "source": [
     "for i in 'ATCG':\n",
-    "    percentage = #Calculate the percentage of 'A's, 'T's, 'C's, and 'G's in chr21\n",
-    "    "
+    "    percentage = #Calculate the percentage of 'A's, 'T's, 'C's, and 'G's in chr21"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -358,48 +360,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aAcGgCNtnT\n",
-      "10.2786095835\n",
-      "11.3772116062\n",
-      "7.23436026611\n",
-      "7.63376483576\n",
-      "7.27323007873\n",
-      "7.64248914318\n",
-      "27.0584488082\n",
-      "10.1403607882\n",
-      "0.000103885537253\n",
-      "11.3614210046\n"
+      "0.113772116062\n",
+      "0.113614210046\n",
+      "0.0764248914318\n",
+      "0.0763376483576\n"
      ]
     }
    ],
    "source": [
-    "print unique\n",
-    "for char in unique:\n",
-    "    print chr21.count(char)/float(len(chr21))*100\n"
+    "#Answer\n",
+    "for i in 'ATCG':\n",
+    "    percentage = chr21.count(i)/float(len(chr21))\n",
+    "    print percentage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should've gotten that As and Ts each make up ~11.4% of chromosome 21 and Gs and Cs each make up ~7.6%.\n",
+    "\n",
+    "Now, let's try to transcribe and find the reverse complement of DNA. Transcribing DNA is pretty simple in Python. All you have to do is replace all Ts with Us in a nucleotide sequence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question:1\n",
-      "Correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "answer = eval(raw_input(\"Question:\"))\n",
-    "if answer == 1:\n",
-    "    print \"Correct\"\n",
-    "else:\n",
-    "    print \"Incorrect\""
+    "DNA = 'GATGGAACTTGACTACGTAAATT'\n",
+    "RNA = #Complete the code to transcribe the DNA sequence here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the reverse complement is a little bit harder. Typically DNA is read 5' to 3'. This means that for double stranded DNA, the two strands are aligned with 5' and 3' ends opposite to each other. Thus, sometimes it is important to know the reverse complement of a single strand of the DNA. The reverse complement can be computed by first reversing a DNA sequence, and then taking the complement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "DNA = 'AAAACCCGGT'\n",
+    "rev_complement = #Complete the code to find the reverse complement. Hint: use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Translating Open Reading Frames\n",
+    "This section will piece together some of the ideas we used above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Summary"
    ]
   }
  ],
